--- a/packages/q-view/index.html
+++ b/packages/q-view/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Hello Quark</title>
+  <title>Q-VIEW</title>
   <script type="module" src="./src/index.tsx"></script>
   <script crossorigin="anonymous" integrity="sha384-KcyRSlC9FQog/lJsT+QA8AUIFBgnwKM7bxm7/YaX+NTr4D00npYawrX0h+oXI3a2"
     src="https://lib.baomitu.com/jquery/1.12.4/jquery.js"></script>
@@ -28,28 +28,84 @@
       language; string; 初始语言
     </q-attr-table>
 
-    <q-event-table>
+    <q-attr-table type="event">
       change; {value:string,language: string}; 变化
+    </q-attr-table>
 
-    </q-event-table>
+    <q-attr-table type="method">
+      setValue;(v:string):void;设置内容
+      setReadOnly;(v:boolean):void;设置可读
+      setLanguage;(v:string):void;设置语言
+    </q-attr-table>
 
     <div class="example">
-      <q-code-area id="ca" value="为跨技术栈而生！"></q-code-area>
+      <q-code-area id="ca" value="console.log('可编辑状态')"></q-code-area>
       <pre> </pre>
-      <q-code-area id="ca" value="为跨技术栈而生！" language="sql" readOnly></q-code-area>
-      <pre>
-      </pre>
+      <q-code-area id="ca2" value="console.log('只读状态')" language="sql" readOnly></q-code-area>
+      <pre></pre>
     </div>
 
     <script>
-      $('#ca').on('change', e => {
-        $('#ca').next().html(JSON.stringify(e.detail, null, 2))
+      [$('#ca'), $('#ca2')].forEach(t => {
+        t.on('change', e => {
+          t.next().html(JSON.stringify(e.detail, null, 2))
+        })
       })
+
     </script>
   </q-doc-view>
 
 
-  <p>Edit <code>src/index.tsx</code> and save to test HMR</p>
+  <q-doc-view title="q-dialog">
+    <q-attr-table type="event">
+      confirm; null; 确认事件
+      close; null; 取消事件
+    </q-attr-table>
+
+    <q-attr-table type="slot">
+      default;默认内容
+      footer;底部内容
+    </q-attr-table>
+    <div class="example">
+
+      <button id="dialog-button">
+        默认样式
+      </button>
+
+      <button id="dialog-button2">自定义内容</button>
+
+      <q-dialog id="dialog">
+        我是内容
+        我是内容
+        我是内容
+        我是内容
+        我是内容
+      </q-dialog>
+
+      <q-dialog id="dialog2">
+        我是内容
+        我是内容
+        我是内容
+        我是内容
+        我是内容
+        <div slot="footer" style="background-color: skyblue;">
+          我是尾巴
+        </div>
+      </q-dialog>
+
+      <script>
+        $('#dialog-button').on('click', () => {
+          $('#dialog')[0].open()
+        })
+
+        $('#dialog-button2').on('click', () => {
+          $('#dialog2')[0].open()
+        })
+      </script>
+    </div>
+  </q-doc-view>
+
+
   <p><a href="/index.vue.html">在 Vue.js 中调试（Debugging in Vue.js）</a></p>
 
 
