--- a/packages/q-view/index.html
+++ b/packages/q-view/index.html
@@ -116,6 +116,17 @@
     </div>
   </q-doc-view>
 
+
+  <q-doc-view title="q-cropper">
+
+    <div class="example">
+
+      <q-cropper src="https://static-cse.canva.cn/blob/239388/e1604019539295.jpg">
+
+      </q-cropper>
+    </div>
+  </q-doc-view>
+
   <p><a href="/index.vue.html">在 Vue.js 中调试（Debugging in Vue.js）</a></p>
 </body>
 
