--- a/packages/q-view/index.html
+++ b/packages/q-view/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Q-VIEW</title>
-  <script type="module" src="./src/index.tsx"></script>
+  <script type="module" src="/src/index.tsx"></script>
   <script crossorigin="anonymous" integrity="sha384-KcyRSlC9FQog/lJsT+QA8AUIFBgnwKM7bxm7/YaX+NTr4D00npYawrX0h+oXI3a2"
     src="https://lib.baomitu.com/jquery/1.12.4/jquery.js"></script>
   <script src="
