--- a/packages/q-view/index.html
+++ b/packages/q-view/index.html
@@ -250,8 +250,7 @@
     <q-tabs>
       <q-tab title="裁切模式">
         <q-html-code>
-          <q-image-cropper id="cropper" style="width:500px"
-            src="https://static-cse.canva.cn/blob/239388/e1604019539295.jpg">
+          <q-image-cropper src="https://static-cse.canva.cn/blob/239388/e1604019539295.jpg">
           </q-image-cropper>
         </q-html-code>
       </q-tab>
