--- a/packages/q-view/index.html
+++ b/packages/q-view/index.html
@@ -15,6 +15,8 @@
       padding: 20px;
     }
 
+
+
     .introduce {
       display: flex;
       align-items: center;
@@ -51,298 +53,297 @@
 </head>
 
 <body>
-  <q-doc-view toc-title="介绍">
-    <div class="introduce" slot="title">
-      <img src="https://pic.imgdb.cn/item/65654f5cc458853aef6cc89f.png" width=80 alt="">
-      <div class="introduce-title">
-        <b class="title">
-          Q-VIEW
-        </b>
-        <br>
-        <b class="subtitle">
-          一个web-components ui 库
-        </b>
+  <div class="app">
+    <q-doc-view toc-title="介绍">
+      <div class="introduce" slot="title">
+        <img src="https://pic.imgdb.cn/item/65654f5cc458853aef6cc89f.png" width=80 alt="">
+        <div class="introduce-title">
+          <b class="title">
+            Q-VIEW
+          </b>
+          <br>
+          <b class="subtitle">
+            一个web-components ui 库
+          </b>
+        </div>
       </div>
-    </div>
 
 
-    <q-tabs>
-      <q-tab title="前置">
-        <ul>
-          <li>
-            所有组件均有 data 的 get 方法, 返回当前组件的实时 property,用于第三方组件对组件的属性收集,避免再次通过 getAttribute 属性来重新获取.
-          </li>
-        </ul>
-      </q-tab>
-      <q-tab title="文档用web-components">
-        <ol>
-          <li>
-            q-doc-view 文档块
+      <q-tabs>
+        <q-tab title="前置">
+          <ul>
+            <li>
+              所有组件均有 data 的 get 方法, 返回当前组件的实时 property,用于第三方组件对组件的属性收集,避免再次通过 getAttribute 属性来重新获取.
+            </li>
+          </ul>
+        </q-tab>
+        <q-tab title="文档用web-components">
+          <ol>
+            <li>
+              q-doc-view 文档块
 
-            <q-tabs>
-              <q-tab title="属性">
-                <q-attr-table>
-                  title;string;undefined;标题(当 slot=title 存在时,title 不显示)
-                </q-attr-table>
-              </q-tab>
-              <q-tab title="插槽">
-                <q-attr-table type="slot">
-                  title;标题
-                  attr;属性
-                  default;默认
-                </q-attr-table>
-              </q-tab>
-            </q-tabs>
-          </li>
-          <li>
-            q-attr-table 属性表格
-            <q-tabs>
-              <q-tab title="属性">
-                <q-attr-table>
-                  type;attr|event|slot|method;attr;属性|事件|插槽|方法
-                </q-attr-table>
-              </q-tab>
-            </q-tabs>
-          </li>
-          <li>
-            q-html-code 切换html 源码
-          </li>
-          <li>
-            q-tabs tabs 切换
-          </li>
-          <li>
-            q-tab tabs 内部 item
-            <q-tabs>
-              <q-tab title="属性">
-                <q-attr-table>
-                  title;string;undefined;标题
-                </q-attr-table>
-              </q-tab>
-            </q-tabs>
-          </li>
-          <li>
-            q-toc 自动搜查所有 q-doc-view 的标题,形成跳转链接
-          </li>
-        </ol>
-      </q-tab>
-    </q-tabs>
-  </q-doc-view>
-  <q-doc-view title="q-code-area">
-    <q-tabs slot="attr">
-      <q-tab title="属性">
-        <q-attr-table>
-          value; string; undefined ;内容
-          readOnly; boolean; false ; 是否可读
-          language; string; javascript ; 初始语言
-        </q-attr-table>
-      </q-tab>
-      <q-tab title="事件">
-        <q-attr-table type="event"> change; {value:string,language: string}; 变化 </q-attr-table>
-      </q-tab>
-      <q-tab title="方法">
-        <q-attr-table type="method">
-          setValue;(v:string):void;设置内容
-          setReadOnly;(v:boolean):void;设置可读
-          setLanguage;(v:string):void;设置语言
-        </q-attr-table>
-      </q-tab>
-    </q-tabs>
-    <q-tabs>
-      <q-tab title="编辑模式">
-        <q-html-code>
-          <q-code-area value="console.log('可编辑状态')"></q-code-area>
-        </q-html-code>
-      </q-tab>
-      <q-tab title="只读模式">
-        <q-html-code>
-          <q-code-area value="console.log('只读状态')" language="sql" readOnly></q-code-area>
-        </q-html-code>
-      </q-tab>
-    </q-tabs>
+              <q-tabs>
+                <q-tab title="属性">
+                  <q-attr-table>
+                    title;string;undefined;标题(当 slot=title 存在时,title 不显示)
+                  </q-attr-table>
+                </q-tab>
+                <q-tab title="插槽">
+                  <q-attr-table type="slot">
+                    title;标题
+                    attr;属性
+                    default;默认
+                  </q-attr-table>
+                </q-tab>
+              </q-tabs>
+            </li>
+            <li>
+              q-attr-table 属性表格
+              <q-tabs>
+                <q-tab title="属性">
+                  <q-attr-table>
+                    type;attr|event|slot|method;attr;属性|事件|插槽|方法
+                  </q-attr-table>
+                </q-tab>
+              </q-tabs>
+            </li>
+            <li>
+              q-html-code 切换html 源码
+            </li>
+            <li>
+              q-tabs tabs 切换
+            </li>
+            <li>
+              q-tab tabs 内部 item
+              <q-tabs>
+                <q-tab title="属性">
+                  <q-attr-table>
+                    title;string;undefined;标题
+                  </q-attr-table>
+                </q-tab>
+              </q-tabs>
+            </li>
+            <li>
+              q-toc 自动搜查所有 q-doc-view 的标题,形成跳转链接
+            </li>
+          </ol>
+        </q-tab>
+      </q-tabs>
+    </q-doc-view>
+    <q-doc-view title="q-code-area">
+      <q-tabs slot="attr">
+        <q-tab title="属性">
+          <q-attr-table>
+            value; string; undefined ;内容
+            readOnly; boolean; false ; 是否可读
+            language; string; javascript ; 初始语言
+          </q-attr-table>
+        </q-tab>
+        <q-tab title="事件">
+          <q-attr-table type="event"> change; {value:string,language: string}; 变化 </q-attr-table>
+        </q-tab>
+        <q-tab title="方法">
+          <q-attr-table type="method">
+            setValue;(v:string):void;设置内容
+            setReadOnly;(v:boolean):void;设置可读
+            setLanguage;(v:string):void;设置语言
+          </q-attr-table>
+        </q-tab>
+      </q-tabs>
+      <q-tabs>
+        <q-tab title="编辑模式">
+          <q-html-code>
+            <q-code-area value="console.log('可编辑状态')"></q-code-area>
+          </q-html-code>
+        </q-tab>
+        <q-tab title="只读模式">
+          <q-html-code>
+            <q-code-area value="console.log('只读状态')" language="sql" readOnly></q-code-area>
+          </q-html-code>
+        </q-tab>
+      </q-tabs>
 
-  </q-doc-view>
+    </q-doc-view>
+    <q-doc-view title="q-dialog">
+      <q-tabs slot="attr">
+        <q-tab title="属性">
+          <q-attr-table>
+            mask-close;boolean;false;设置为 true, 点击 mask 可关闭
+          </q-attr-table>
+        </q-tab>
+        <q-tab title="事件">
+          <q-attr-table type="event">
+            confirm; null; 确认事件
+            close; null; 取消事件
+          </q-attr-table>
+        </q-tab>
+        <q-tab title="插槽">
+          <q-attr-table type="slot">
+            default;默认内容
+            footer;底部内容
+          </q-attr-table>
+        </q-tab>
+      </q-tabs>
 
-  <q-doc-view title="q-dialog">
-    <q-tabs slot="attr">
-      <q-tab title="属性">
-        <q-attr-table>
-          mask-close;boolean;false;设置为 true, 点击 mask 可关闭
-        </q-attr-table>
-      </q-tab>
-      <q-tab title="事件">
-        <q-attr-table type="event">
-          confirm; null; 确认事件
-          close; null; 取消事件
-        </q-attr-table>
-      </q-tab>
-      <q-tab title="插槽">
-        <q-attr-table type="slot">
-          default;默认内容
-          footer;底部内容
-        </q-attr-table>
-      </q-tab>
-    </q-tabs>
+      <q-tabs>
+        <q-tab title="默认">
+          <q-html-code>
+            <q-dialog>
+              <button slot="button">默认样式</button>
+              我是内容 我是内容 我是内容 我是内容 我是内容
+            </q-dialog>
+          </q-html-code>
+        </q-tab>
+        <q-tab title="自定义内容">
+          <q-html-code>
+            <q-dialog id="custom-dialog">
+              <button slot="button">自定义内容</button>
+              我是内容 我是内容 我是内容 我是内容 我是内容
+              <div slot="footer" style="background-color: skyblue">我是footer,我有自己的颜色</div>
+            </q-dialog>
+          </q-html-code>
+        </q-tab>
+      </q-tabs>
+    </q-doc-view>
+    <q-doc-view title="q-media-player">
+      <q-tabs slot="attr">
+        <q-tab title="属性">
+          <q-attr-table> src;string;undefined;媒体文件url </q-attr-table>
+        </q-tab>
+        <q-tab title="事件">
+          <q-attr-table type="event">
+            load;null;加载成功
+            error;null;报错
+          </q-attr-table>
+        </q-tab>
+      </q-tabs>
+      <q-tabs>
+        <q-tab title="视频文件">
+          <q-html-code>
+            <q-media-player src="https://media.w3.org/2010/05/sintel/trailer.mp4"></q-media-player>
+          </q-html-code>
+        </q-tab>
+        <q-tab title="音频文件">
+          <q-html-code>
+            <q-media-player src="http://downsc.chinaz.net/Files/DownLoad/sound1/201906/11582.mp3"></q-media-player>
+          </q-html-code>
+        </q-tab>
+      </q-tabs>
+    </q-doc-view>
+    <q-doc-view title="q-image-cropper(暂未适配移动端)" toc-title="q-image-cropper">
+      <q-tabs slot="attr">
+        <q-tab title="属性">
+          <q-attr-table>
+            src;string;undefined;图片地址
+            rect;string;undefined;[图片宽度,裁切宽度,图片高度,裁切高度]组成的字符串
+            matrix;string;1,0,0,1,0,0;[scaleX(), skewY(), skewX(), scaleY(), translateX(), translateY()]排列,默认会居中
+          </q-attr-table>
+        </q-tab>
 
-    <q-tabs>
-      <q-tab title="默认">
-        <q-html-code>
-          <q-dialog>
-            <button slot="button">默认样式</button>
-            我是内容 我是内容 我是内容 我是内容 我是内容
-          </q-dialog>
-        </q-html-code>
-      </q-tab>
-      <q-tab title="自定义内容">
-        <q-html-code>
-          <q-dialog id="custom-dialog">
-            <button slot="button">自定义内容</button>
-            我是内容 我是内容 我是内容 我是内容 我是内容
-            <div slot="footer" style="background-color: skyblue">我是footer,我有自己的颜色</div>
-          </q-dialog>
-        </q-html-code>
-      </q-tab>
-    </q-tabs>
-  </q-doc-view>
+        <q-tab title="事件">
+          <q-attr-table type="event">
+            confirm; {rect:string,matrix:string,src:string};确认事件
+            cancel; {rect:string,matrix:string,src:string};取消事件
+            load;null;加载图片成功
+          </q-attr-table>
+        </q-tab>
+      </q-tabs>
+      <q-tabs>
+        <q-tab title="裁切模式">
+          <q-html-code>
+            <q-image-cropper src="https://static-cse.canva.cn/blob/239388/e1604019539295.jpg">
+            </q-image-cropper>
+          </q-html-code>
+        </q-tab>
+        <q-tab title="配置初始位置">
+          <q-html-code>
+            <q-image-cropper matrix="1,0,0,1,10,20" rect="300,200,300,100" style="width:500px"
+              src="https://static-cse.canva.cn/blob/239388/e1604019539295.jpg">
+            </q-image-cropper>
+          </q-html-code>
+        </q-tab>
+      </q-tabs>
+    </q-doc-view>
+    <q-doc-view title="q-image-resize">
+      <q-tabs slot="attr">
+        <q-tab title="属性">
+          <q-attr-table>
+            src;string;null;图片地址
+            readOnly;boolean;false;是否只读
+          </q-attr-table>
+        </q-tab>
+        <q-tab title="事件">
+          <q-attr-table type="event">
+            load;null;加载成功
+            resizestart;null;开始 resize
+            resizeend;this.data;结束 resize
+            confirm;this.data;确认 resize width&height
+          </q-attr-table>
+        </q-tab>
+        <q-tab title="插槽">
+          <q-attr-table type="slot">
+            toolbar;toolbar 插槽,当用户点击 resize 时显示
+          </q-attr-table>
+        </q-tab>
+      </q-tabs>
 
-  <q-doc-view title="q-media-player">
-    <q-tabs slot="attr">
-      <q-tab title="属性">
-        <q-attr-table> src;string;undefined;媒体文件url </q-attr-table>
-      </q-tab>
-      <q-tab title="事件">
-        <q-attr-table type="event">
-          load;null;加载成功
-          error;null;报错
-        </q-attr-table>
-      </q-tab>
-    </q-tabs>
-    <q-tabs>
-      <q-tab title="视频文件">
-        <q-html-code>
-          <q-media-player src="https://media.w3.org/2010/05/sintel/trailer.mp4"></q-media-player>
-        </q-html-code>
-      </q-tab>
-      <q-tab title="音频文件">
-        <q-html-code>
-          <q-media-player src="http://downsc.chinaz.net/Files/DownLoad/sound1/201906/11582.mp3"></q-media-player>
-        </q-html-code>
-      </q-tab>
-    </q-tabs>
-  </q-doc-view>
-  <q-doc-view title="q-image-cropper(暂未适配移动端)" toc-title="q-image-cropper">
-    <q-tabs slot="attr">
-      <q-tab title="属性">
-        <q-attr-table>
-          src;string;undefined;图片地址
-          rect;string;undefined;[图片宽度,裁切宽度,图片高度,裁切高度]组成的字符串
-          matrix;string;1,0,0,1,0,0;[scaleX(), skewY(), skewX(), scaleY(), translateX(), translateY()]排列,默认会居中
-        </q-attr-table>
-      </q-tab>
-
-      <q-tab title="事件">
-        <q-attr-table type="event">
-          confirm; {rect:string,matrix:string,src:string};确认事件
-          cancel; {rect:string,matrix:string,src:string};取消事件
-          load;null;加载图片成功
-        </q-attr-table>
-      </q-tab>
-    </q-tabs>
-    <q-tabs>
-      <q-tab title="裁切模式">
-        <q-html-code>
-          <q-image-cropper src="https://static-cse.canva.cn/blob/239388/e1604019539295.jpg">
-          </q-image-cropper>
-        </q-html-code>
-      </q-tab>
-      <q-tab title="配置初始位置">
-        <q-html-code>
-          <q-image-cropper matrix="1,0,0,1,10,20" rect="300,200,300,100" style="width:500px"
-            src="https://static-cse.canva.cn/blob/239388/e1604019539295.jpg">
-          </q-image-cropper>
-        </q-html-code>
-      </q-tab>
-    </q-tabs>
-  </q-doc-view>
-  <q-doc-view title="q-image-resize">
-    <q-tabs slot="attr">
-      <q-tab title="属性">
-        <q-attr-table>
-          src;string;null;图片地址
-          readOnly;boolean;false;是否只读
-        </q-attr-table>
-      </q-tab>
-      <q-tab title="事件">
-        <q-attr-table type="event">
-          load;null;加载成功
-          resizestart;null;开始 resize
-          resizeend;this.data;结束 resize
-          confirm;this.data;确认 resize width&height
-        </q-attr-table>
-      </q-tab>
-      <q-tab title="插槽">
-        <q-attr-table type="slot">
-          toolbar;toolbar 插槽,当用户点击 resize 时显示
-        </q-attr-table>
-      </q-tab>
-    </q-tabs>
-
-    <q-tabs>
-      <q-tab title="编辑模式">
-        <q-html-code>
-          <div style="width: 500px">
-            <q-image-resize src="https://static-cse.canva.cn/blob/239388/e1604019539295.jpg">
-            </q-image-resize>
-          </div>
-        </q-html-code>
-      </q-tab>
-      <q-tab title="基于裁剪数据">
-        <q-html-code>
-          <q-image-resize matrix="1,0,0,1,100,200" rect="500,200,332,100" style="width: 500px"
-            src="https://static-cse.canva.cn/blob/239388/e1604019539295.jpg">
-          </q-image-resize>
-        </q-html-code>
-      </q-tab>
-      <q-tab title="只读模式">
-        <q-html-code>
-          <q-image-resize readOnly style="width: 500px"
-            src="https://static-cse.canva.cn/blob/239388/e1604019539295.jpg">
-          </q-image-resize>
-        </q-html-code>
-      </q-tab>
-      <q-tab title="toolbar 插槽">
-        <q-html-code>
-          <q-image-resize style="width: 500px" src="https://static-cse.canva.cn/blob/239388/e1604019539295.jpg">
-            <div slot="toolbar">
-              <button id="toolbar">功能</button>
+      <q-tabs>
+        <q-tab title="编辑模式">
+          <q-html-code>
+            <div style="width: 500px">
+              <q-image-resize src="https://static-cse.canva.cn/blob/239388/e1604019539295.jpg">
+              </q-image-resize>
             </div>
-            <script>
-              $('#toolbar').on("click", e => {
-                alert('toolbar 点击')
-              })
-            </script>
-          </q-image-resize>
-        </q-html-code>
-      </q-tab>
+          </q-html-code>
+        </q-tab>
+        <q-tab title="基于裁剪数据">
+          <q-html-code>
+            <q-image-resize matrix="1,0,0,1,100,200" rect="500,200,332,100" style="width: 500px"
+              src="https://static-cse.canva.cn/blob/239388/e1604019539295.jpg">
+            </q-image-resize>
+          </q-html-code>
+        </q-tab>
+        <q-tab title="只读模式">
+          <q-html-code>
+            <q-image-resize readOnly style="width: 500px"
+              src="https://static-cse.canva.cn/blob/239388/e1604019539295.jpg">
+            </q-image-resize>
+          </q-html-code>
+        </q-tab>
+        <q-tab title="toolbar 插槽">
+          <q-html-code>
+            <q-image-resize style="width: 500px" src="https://static-cse.canva.cn/blob/239388/e1604019539295.jpg">
+              <div slot="toolbar">
+                <button id="toolbar">功能</button>
+              </div>
+              <script>
+                $('#toolbar').on("click", e => {
+                  alert('toolbar 点击')
+                })
+              </script>
+            </q-image-resize>
+          </q-html-code>
+        </q-tab>
 
-    </q-tabs>
-  </q-doc-view>
-
-  <q-doc-view title="q-image-cropper-resize">
-    <q-tabs>
-      <q-tab title="默认">
-        <q-image-cropper-resize src="https://static-cse.canva.cn/blob/239388/e1604019539295.jpg">
-        </q-image-cropper-resize>
-      </q-tab>
-      <q-tab title="配置参数">
-        <q-image-cropper-resize src="https://static-cse.canva.cn/blob/239388/e1604019539295.jpg" width="1124.8"
-          height="869.2" rect="1208,395.79999999999995,803,527.2" matrix="1,0,0,1,553.6,51.89999999999998">
-        </q-image-cropper-resize>
-      </q-tab>
-    </q-tabs>
-  </q-doc-view>
-  <q-toc>
-    <div slot="footer"><a href="/index.vue.html">在 Vue.js 中调试</a></div>
-  </q-toc>
+      </q-tabs>
+    </q-doc-view>
+    <q-doc-view title="q-image-cropper-resize">
+      <q-tabs>
+        <q-tab title="默认">
+          <q-image-cropper-resize src="https://static-cse.canva.cn/blob/239388/e1604019539295.jpg">
+          </q-image-cropper-resize>
+        </q-tab>
+        <q-tab title="配置参数">
+          <q-image-cropper-resize src="https://static-cse.canva.cn/blob/239388/e1604019539295.jpg" width="1124.8"
+            height="869.2" rect="1208,395.79999999999995,803,527.2" matrix="1,0,0,1,553.6,51.89999999999998">
+          </q-image-cropper-resize>
+        </q-tab>
+      </q-tabs>
+    </q-doc-view>
+    <q-toc>
+      <div slot="footer"><a href="/index.vue.html">在 Vue.js 中调试</a></div>
+    </q-toc>
+  </div>
 </body>
 
 </html>
