--- a/packages/q-view/index.html
+++ b/packages/q-view/index.html
@@ -381,8 +381,8 @@
           </q-image-cropper-resize>
         </q-tab>
         <q-tab title="配置参数">
-          <q-image-cropper-resize src="https://static-cse.canva.cn/blob/239388/e1604019539295.jpg" width="1124.8"
-            height="869.2" rect="1208,395.79999999999995,803,527.2" matrix="1,0,0,1,553.6,51.89999999999998">
+          <q-image-cropper-resize src="https://static-cse.canva.cn/blob/239388/e1604019539295.jpg" width="581.4"
+            height="257.6" rect="969,581.4,644,257.6" matrix="1,0,0,1,0,101.19999999999999">
           </q-image-cropper-resize>
         </q-tab>
       </q-tabs>
